# weavemark

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  benchmark-results.json  pyproject.toml  weavemark.json
.github/: copilot-instructions.md
.github/prompts/: grammar-sync.prompt.md  weavemark.prompt.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: analytics.js  color-palette-study.html  development.md  examples.md  index.html  introduction.html  local-demo-links.js  migrating-to-0.8.md  mobile-navigation.js  principles.html  python-api.html  python-api.md  reference.html  site.css  tutorial-advanced.html  tutorial-directives.html  tutorial-executable.html  tutorial-games.html  tutorial-illustrated.html  tutorial-implement.html  tutorial-products.html  tutorial-refine.html  tutorial-reuse.html  tutorial.html  usage-reference.md  weavemark.ebnf
examples/: README.md
examples/_lib/: example-env.sh  weavemark_example_progress.py
promplets/: README.md
promplets/tutorials/: README.md  adaptive-tutor-guided.weavemark.md  adaptive-tutor.weavemark.md  language-learning-goal-plan.weavemark.md  metro-lines-pack.weavemark.md  metro-lines.weavemark.md  release-workbench-pack.weavemark.md  release-workbench.weavemark.md
scripts/: build_pages_site.py  check_distribution_artifact.py  check_grammar_sync.py  check_markdown_hygiene.py  check_release.py  check_repository_hygiene.py  install_vscode_extension.py
src/weavemark/: __init__.py  api.py  app.py  cli_inputs.py  compile_options.py  controller.py  defaults.py  exceptions.py  fragments.py  implementation.py  library_cli.py  (+11 more)
studies/: AGENTS.md  README.md
tests/: test_ai_kanban_browser.py  test_app_logging.py  test_ask_directive.py  test_async_cleanup.py  test_chain_image_context.py  test_cli_ask.py  test_compilation_state.py  test_core_tool_calling.py  test_diagnostics.py  test_directive_semantics_llm.py  test_directive_validation.py  test_discovery_catalog.py  test_discovery_config.py  test_discovery_metadata.py  test_domain_promplet_contracts.py  test_dotted_paths.py  test_engines.py  test_example_maintained_outputs.py  test_fslm_dependency.py  test_fslm_engine.py  test_grammar_sync.py  test_home_hero.py  test_implementation.py  test_iterate_directive.py  test_knowledge_cards_browser.py  test_knowledge_cards_spec.py  test_live_module_refinement.py  test_logging_policy.py  test_logging_setup.py  test_markdown_hygiene.py  test_mobile_navigation.py  test_multimodal.py  test_packaging.py  test_pages_site.py  test_promplet_contracts.py  test_promplet_library.py  test_protection.py  test_protection_cli.py  test_provenance.py  test_public_api.py  (+28 more)
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json
(+922 files in other folders)
