[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavemark"
version = "0.8.0"
description = "An LLM-powered prompt composition system with directives and variables"
authors = [{name = "Paulo Salem", email = "paulosalem@paulosalem.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "llm",
    "ai",
    "prompting",
    "prompt-engineering",
    "prompt-composition",
    "directives",
    "templates",
]

dependencies = [
    "rich>=13.0.0,<15",
    "pyyaml>=6.0.0,<7",
    "litellm>=1.0.0,<2",
    "pydantic>=2.0.0,<3",
    "typing-extensions>=4.8.0,<5",
    "ellements[cli,execution,fslm]>=0.2.0,<0.3",
]

[project.urls]
Homepage = "https://github.com/paulosalem/weavemark"
Repository = "https://github.com/paulosalem/weavemark"
"Bug Tracker" = "https://github.com/paulosalem/weavemark/issues"

[project.scripts]
weavemark = "weavemark.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-asyncio>=0.21.0,<2",
    "mypy>=1.7.0,<2",
    "ruff>=0.1.0,<1",
    "black>=23.0.0,<27",
    "types-PyYAML>=6.0.12,<7",
]
convert = [
    "markitdown>=0.1.0,<0.2",
]
examples = [
    "ellements[finance,web]>=0.2.0,<0.3",
]
benchmarking = [
    "ellements[benchmarking]>=0.2.0,<0.3",
]
ui = [
    "textual>=0.40.0,<7",
]
all = [
    "weavemark[benchmarking,convert,dev,examples,ui]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weavemark"]

[tool.hatch.build.targets.wheel.force-include]
"promplets" = "weavemark/promplets"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/promplets",
    "/studies",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
cache_dir = "~/.cache/mypy/weavemark"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services or optional integrations",
]

[tool.black]
target-version = ['py311']
line-length = 88
